--- a/index.html
+++ b/index.html
@@ -10,5 +10,20 @@
 </head>
 <body>
     
+    <!-- Header -->
+    <header>
+
+    </header>
+
+    <!-- Main -->
+    <main>
+
+    </main>
+
+    <!-- Footer -->
+    <footer>
+
+    </footer>
+    
 </body>
 </html>
