--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
     
     <!-- Header -->
     <header>
-
+        <nav> 
+            <ul class="flex">
+                <li> <a href="#"><i class="fa-solid fa-border-all"></i> Speaker view</a> </li>
+                <li> <a href="#"><i class="fa-solid fa-maximize"></i></a> </li>
+            </ul>
+        </nav>
     </header>
 
     <!-- Main -->
@@ -24,6 +29,6 @@
     <footer>
 
     </footer>
-    
+
 </body>
 </html>
