--- a/index.html
+++ b/index.html
@@ -22,7 +22,14 @@
 
     <!-- Main -->
     <main>
+        <div class="container">
+            <div class="row">
+                <span class="card">
+                    <img src="https://picsum.photos/id/259/200/200.jpg" alt="John Wick">
+                </span>
 
+            </div>
+        </div>
     </main>
 
     <!-- Footer -->
