--- a/index.html
+++ b/index.html
@@ -24,8 +24,140 @@
     <main>
         <div class="container">
             <div class="row">
+
+                <!-- Card -->
                 <span class="card">
-                    <img src="https://picsum.photos/id/259/200/200.jpg" alt="John Wick">
+                    <img src="https://picsum.photos/id/259/250/250.jpg" alt="John Wick">
+                    <span class="info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </span>
+
+                <!-- Card -->
+                <span class="card">
+                    <img src="https://picsum.photos/id/259/250/250.jpg" alt="John Wick">
+                    <span class="info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </span>
+
+                <!-- Card -->
+                <span class="card">
+                    <img src="https://picsum.photos/id/259/250/250.jpg" alt="John Wick">
+                    <span class="info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </span>
+
+                <!-- Card -->
+                <span class="card">
+                    <img src="https://picsum.photos/id/259/250/250.jpg" alt="John Wick">
+                    <span class="info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </span>
+
+                <!-- Card -->
+                <span class="card">
+                    <img src="https://picsum.photos/id/259/250/250.jpg" alt="John Wick">
+                    <span class="info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </span>
+
+                <!-- Card -->
+                <span class="card">
+                    <img src="https://picsum.photos/id/259/250/250.jpg" alt="John Wick">
+                    <span class="info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </span>
+
+                <!-- Card -->
+                <span class="card">
+                    <img src="https://picsum.photos/id/259/250/250.jpg" alt="John Wick">
+                    <span class="info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </span>
+
+                <!-- Card -->
+                <span class="card">
+                    <img src="https://picsum.photos/id/259/250/250.jpg" alt="John Wick">
+                    <span class="info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </span>
+
+                <!-- Card -->
+                <span class="card">
+                    <img src="https://picsum.photos/id/259/250/250.jpg" alt="John Wick">
+                    <span class="info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </span>
+
+                <!-- Card -->
+                <span class="card">
+                    <img src="https://picsum.photos/id/259/250/250.jpg" alt="John Wick">
+                    <span class="info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </span>
+
+                <!-- Card -->
+                <span class="card">
+                    <img src="https://picsum.photos/id/259/250/250.jpg" alt="John Wick">
+                    <span class="info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </span>
+
+                <!-- Card -->
+                <span class="card">
+                    <img src="https://picsum.photos/id/259/250/250.jpg" alt="John Wick">
+                    <span class="info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </span>
+
+                <!-- Card -->
+                <span class="card">
+                    <img src="https://picsum.photos/id/259/250/250.jpg" alt="John Wick">
+                    <span class="info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </span>
+
+                <!-- Card -->
+                <span class="card">
+                    <img src="https://picsum.photos/id/259/250/250.jpg" alt="John Wick">
+                    <span class="info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
+                </span>
+
+                <!-- Card -->
+                <span class="card">
+                    <img src="https://picsum.photos/id/259/250/250.jpg" alt="John Wick">
+                    <span class="info">
+                        <i class="fa-solid fa-microphone-slash"></i>
+                        Pinco Pallo
+                    </span>
                 </span>
 
             </div>
